--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         body {
             /* #2 #colorful #background */
-            background-color: #F5F5F5;
+            background-color: white;
         }
 
         h1 {
@@ -41,7 +41,7 @@
 
         button {
             /* #2 #colourful #plusfive */
-            background-color: #CDDC39;
+            background-color: yellow;
             color: black;
             /* #2 #font capital #letters */
             text-transform: uppercase;
@@ -52,6 +52,7 @@
         h2 {
             /* #2 #colorful #channelandchat */
             background-color: white;
+            list-style-type: none;
         }
 
         /*styles for chat area*/
@@ -75,6 +76,12 @@
             font-size: larger;
             font-style: normal;
         }
+        span {
+            width: 80%;
+        }
+        a {
+            color: black;
+        }
 
     </style>
 
@@ -84,19 +91,23 @@
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" alt="A Moocus bird icon" style="width: 56px; height: 56px;">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<h2>
+<ul>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="a star icon"></ul>
+<ul>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="a star icon"></ul>
+<ul>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="a star image"></ul>
+<ul>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="a star icon"></ul>
+<ul>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="a star icon"></ul>
+</h2>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
+<div>
+<button style="background-color: white;"> new  <img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="a light bulb icon"></button>
+<button style="background-color: white;">trending<img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="a fire icon"></button>
+<button style="background-color: white;">favorites<img src="https:/ip.lfe.mw.tum.de/sections/star.png" alt="a star icon"></button>
+</div>
 
 
 <!-- chat area -->
@@ -110,82 +121,84 @@
 </h1>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+<div style="background-color: #F4F6F6;">
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
-    Wed, June 20th, 13:37
+    <strong><a href="https://w3w.co/cheeses.yard.applies" target="_blank">cheeses.yard.applies</a></strong>
+    Wed, June 20th,13:37
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>15 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
+<span><p>What's the place you folks call home?</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
+    <strong><a href="https://w3w.co/truck.cotton.zone" target="_blank">truck.cotton.zone</a></strong>
     Wed, June 20th, 13:39
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>4 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
+<span><p>BRISBANE! Hang loose!</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
+    <strong><a href="https://w3w.co/thus.best.dishes" target="_blank">thus.best.dishes</a></strong>
     Wed, June 20th, 14:02
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>12 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
+<span><p>The big apple.</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
+    <strong><a href="https://w3w.co/driveway.helper.magazine" target="_blank">driveway.helper.magazine</a></strong>
     Wed, June 20th, 14:02
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>7 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
+<span><p>Eu sou um Carocas.</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
+    <strong><a href="https://w3w.co/escapes.pitch.saucepan" target="_blank">escapes.pitch.saucepan</a></strong>
     Wed, June 20th, 14:07
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>14 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
+<span><p>Greetings from the western cape!</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
 <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
+    <strong><a href="https://w3w.co/meanings.identity.pays" target="_blank">meanings.identity.pays</a></strong>
     Wed, June 20th, 04:08
     <!-- #1 #chat #ttl lives inside the metadata -->
     <em>15 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
+<span><p>北京</p></span>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
 </body>
 </html>
